# denis_grachev_kurs5

./: .gitignore  README.md  database.ini  main.py  pyproject.toml  queries.sql
src/: db_manager.py  engine.py  hh.py
