[tool.poetry]
name = "denis-grachev-kurs5"
version = "0.1.0"
description = ""
authors = ["Grachev Denis <2717087@mail.ru>"]
readme = "README.md"
packages = [{include = "denis_grachev_kurs5"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
